--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "node-sass": "4.9.3",
     "popper.js": "1.14.4",
     "sass-loader": "7.1.0",
-    "vee-validate": "2.1.0-beta.9",
-    "vue": "2.5.2",
+    "vee-validate": "^3.0",
+    "vue": "^2.6",
     "vue-axios": "2.1.3",
+    "vue-i18n": "^8.21.0",
     "vue-loading-overlay": "3.4.0",
     "vue-router": "3.0.1",
     "vuex": "3.5.1"
@@ -54,7 +55,7 @@
     "url-loader": "0.5.8",
     "vue-loader": "13.3.0",
     "vue-style-loader": "3.0.1",
-    "vue-template-compiler": "2.5.2",
+    "vue-template-compiler": "^2.6",
     "webpack": "3.6.0",
     "webpack-bundle-analyzer": "2.9.0",
     "webpack-dev-server": "2.9.1",
